# AINewsTracker

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Test-AI.ipynb  config.py  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  test.py  vercel.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  docker.yml  docs.yml
about/: index.html
api/: index.html
app/: config.py  main.py
app/core/: RSSFeed.py  logging.py
app/core/database/: __init__.py  db.py
app/core/repo/: article.py  company.py  news.py  newsFeed.py  user.py  users.py
app/core/services/: __init__.py  articles.py  crypto.py  discord.py  finbert.py  metrics.py  news.py  newsFeed.py  sentiments.py  strategy.py  summarizer.py  tickers_detection.py  tickers_detections.py  topic_classification.py  user.py
app/core/services/news_summaries/: feedFetcher.py  source.py
app/core/services/rss/: feedFetcher.py  rss.py  source.py  source_object.py
app/core/telemetry/: prometheus.py
app/core/trading/: strategy.py
app/database/: config.py  db.py
app/models/: Companies.py  RSSFeed.py  __init__.py  article.py  company.py  news.py  newsFeed.py  score.py  user.py  users.py
app/newsFeed/: test.py
app/routers/: article.py  company.py  discord.py  news.py  newsFeed.py  newsfeed.py  rss.py  score.py  seed.py  strategy.py  users.py
app/seed/: companies.py  news.py  sources.py
app/services/: article.py  company.py  rss.py  sentiments.py  summary.py
contact/: index.html
deploy/: README.md  docker-compose.yml  prometheus.yml
diagrams/: index.html
diagrams/src/: app_structure.puml  app_structure_details.puml  article_processing_flow.puml  trading_strategy.puml
docs/: about.md  api.md  contact.md  diagrams.md  explanation.md  getting-started.md  index.md  overview.md
docs/diagram/: ai.plantuml  article.plantuml  diagram.plantuml  fetch.plantuml  packages.plantuml  seed.plantuml  strategy.plantuml
docs/diagrams/src/: article_processing_flow.puml  deployment_diagram.puml  fetch_feed_entries_flow.puml  seeding_process.puml  sentiment_analysis_flow.puml
docs/mkdocs/: diagrams.md  example.md  refences.md
docs/source/: conf.py
example/: index.html
explanation/: index.html
frontend/ainewstracker/: mockcoon.json  package-lock.json  package.json
frontend/ainewstracker/src/app/: layout.tsx  page.tsx
frontend/ainewstracker/src/components/: AddCompany.jsx  AddCompany.tsx  AddNewsFeed.jsx  ArticleCard.jsx  Dashboard.tsx  NavBar.tsx
frontend/ainewstracker/src/data/: articles.json
frontend/ainewstracker/src/pages/: Company.jsx  Home.tsx  NewsFeed.jsx  NewsFeed.tsx  SignIn.tsx  SignUp.tsx
getting-started/: index.html
mkdocs/: index.html
mkdocs/about/: index.html
mkdocs/api/: index.html
mkdocs/contact/: index.html
mkdocs/diagrams/: index.html
mkdocs/example/: index.html
mkdocs/explanation/: index.html
mkdocs/getting-started/: index.html
mkdocs/refences/: index.html
mkdocs/tutorials/: index.html
monitoring/: fastapi-dashboard.json  prometheus.yml
overview/: index.html
refences/: index.html
scripts/: install_cuda.sh  update_env.sh  update_version.sh
search/: search_index.json
tests/: test_app.py  test_config.py
tests/core/: test_logging.py
tests/core/database/: test_db.py
tests/core/services/: test__init__.py  test_crypto.py  test_news.py
tests/models/: test_articles.py  test_company.py  test_news.py  test_newsFeed.py  test_users.py
tutorials/: index.html
wiki/: CODE_OF_CONDUCT.md  ISSUES.md  WORKFLOW.md
