[tool.poetry]
name = "AINewsTracker"
version = "0.1.0"
description = "A web application for backtesting the influence of financial news on the stock market using AI."
authors = ["Antoine Boucher <antoine.boucher012@gmail.com>"],
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
pydantic = "^1.10.8"
python-multipart = "^0.0.6"
httpx = "^0.23.3"
pymongo = "^4.3.3"
python-dotenv = "^0.19.2"
uvicorn = {version = "^0.18.3", extras = ["standard"]}
anyio = "^3.7.0"
aioredis = "^2.0.0"
backtesting = "^0.3.3"
backtrader = "^1.9.76.123"
configparser = "^5.3.0"
contractions = "^0.1.73"
fastapi_cache2 = "^0.2.1"
fastapi_health = "^0.4.0"
financedatabase = "^2.0.8"
matplotlib = "^3.5.1"
mpl-finance = "^0.10.1"
nltk = "^3.8.1"
openbb = {version = ">=2.5.1", extras = ["all", "forecast", "optimization"]}
openpyxl = "^3.1.1"
pandas = "^1.5.3"
pandas-ta = "^0.3.14b"
polars = "^0.13.3"
prometheus-fastapi-instrumentator = "^5.9.1"
pyEX = "^0.2.1"
quandl = "^3.7.0"
redis = "^4.5.1"
seaborn = "^0.11.2"
streamlit = ">=1.17.0,<2.0.0"
tweepy = "^4.12.1"
vaderSentiment = "^3.3.2"
yfinance = "^0.2.12"
yahoofinancials = "^1.14"
pyvalet = "^0.1"
motor = "^2.5.1"
discordpy = "^2.2.2"
python-binance = "*"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
pycln = "^2.1.3"
isort = "^5.12.0"
pytest = "^6.2.5"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pycln]
all = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true